--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
@@ -223,30 +223,32 @@
           <td>{{d.name}} {{d.lastName}}</td>
           <td>{{d.position}}</td>
           <td>{{d.allowanceDate}}</td>
-          <td>{{d.allowanceCost}}</td>
+          <td>{{numFunc(d.allowanceCost)}}</td>
           <td>{{d.rentDate}}</td>
-          <td>{{d.rentCost}}</td>
-          <td>{{d.travelCost}}</td>
-          <td>{{d.otherCost}}</td>
-          <td>{{d.sumCost}}</td>
+          <td>{{numFunc(d.rentCost)}}</td>
+          <td>{{numFunc(d.travelCost)}}</td>
+          <td>{{numFunc(d.otherCost)}}</td>
+          <td>{{numFunc(d.sumCost)}}</td>
           <td>{{d.note}}</td>
-        
+
           <td>
             <button class="ui mini red button" type="button" (click)="editData(i)">แก้ไข</button>
-          </td>          
+          </td>
         </tr>
         <tr>
           <td>&nbsp;</td>
-          <td colspan="3"><b>รวม</b></td>
+          <td colspan="3">
+            <b>รวม</b>
+          </td>
           <td></td>
-          <td>{{sum.allowance}}</td>
+          <td>{{numFunc(sum.allowance)}}</td>
           <td></td>
-          <td>{{sum.rent}}</td>
-          <td>{{sum.travel}}</td>
-          <td>{{sum.etc}}</td>
-          <td>{{sum.total}}</td>
+          <td>{{numFunc(sum.rent)}}</td>
+          <td>{{numFunc(sum.travel)}}</td>
+          <td>{{numFunc(sum.etc)}}</td>
+          <td>{{numFunc(sum.total)}}</td>
           <td></td>
-          <td></td>         
+          <td></td>
         </tr>
       </tbody>
     </table>
