--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
@@ -255,7 +255,7 @@
     <br>
     <div class="ui center aligned grid">
       <div class="eight wide column">
-        <button class="ui mini red button" type="button" (click)="deleteData()">
+        <button class="ui {{checkedElements()&&'disabled'}} mini red button" type="button" (click)="deleteData()">
           ลบ
         </button>
         <button class="ui {{detail.length==0&&'disabled'}} mini primary button" type="button" (click)="onSubmit()">
