เปลี่ยนสี button

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-1/int07-5-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-1/int07-5-1.component.html
@@ -104,7 +104,7 @@
             <br> ยอดคงเหลือเงินฝากคลังตามรายงานเคลื่อนไหวเงินฝากคลัง (ZGL_RPT013)
             <br>
 
-          </label>,
+          </label>
         </div>
         <div class="three wide column right aligned">
           <label class="custom-label-w-25">
