--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1.component.html
@@ -232,7 +232,7 @@
           <td>{{d.note}}</td>
 
           <td>
-            <button class="ui mini red button" type="button" (click)="editData(i)">แก้ไข</button>
+            <button class="ui mini orange button" type="button" (click)="editData(i)">แก้ไข</button>
           </td>
         </tr>
         <tr>
